--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       opacity: 0.7;
     }
     .ramo.bloqueado {
-      background-color: #e0b3d7;
+      background-color: #a15592;
       color: #777;
       cursor: not-allowed;
     }
